# notty-game

./: pyproject.toml
.github/workflows/: health_check.yaml  release.yaml
notty/: main.py
notty/src/: consts.py  player_selection.py
notty/src/visual/: action_board.py  base.py  base_selector.py  cards_selector.py  deck.py  player_name_selector.py  winner_display.py
notty_game/dev/configs/: configs.py
tests/test_notty/: test_main.py
tests/test_notty/test_src/test_visual/: test_base_selector.py  test_card_selector.py  test_cards_selector.py  test_player_name_selector.py  test_player_selector.py
