[project]
name = "notty-game"
version = "0.1.0"
description = "A simple card game called Notty using Pygame"
authors = [
    {name = "Winipedia",email = "win.steveker@gmx.de"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
